<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/mvvm_background">

    <EditText
        android:id="@+id/input_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_1_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_2_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_text" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract_text" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply_text" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide_text" />


</LinearLayout>
